[gd_scene load_steps=8 format=2]

[ext_resource path="res://Weapons/Teleport.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/air-strike.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/reload.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/explosion.wav" type="AudioStream" id=4]

[sub_resource type="PlaneMesh" id=5]
size = Vector2( 1, 1 )

[sub_resource type="SpatialMaterial" id=8]
flags_transparent = true
flags_unshaded = true
flags_no_depth_test = true
albedo_color = Color( 0.12549, 0.686275, 1, 1 )
albedo_texture = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "turn"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Target:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 360, 0 ) ]
}

[node name="Teleport" type="Spatial"]
script = ExtResource( 1 )

[node name="Target" type="Spatial" parent="."]

[node name="TargetMesh1" type="MeshInstance" parent="Target"]
transform = Transform( -4.6, 4.02145e-07, 1.75783e-14, -4.02145e-07, -4.6, -4.02145e-07, -1.75783e-14, -4.02145e-07, 4.6, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 8 )

[node name="TargetMesh2" type="MeshInstance" parent="Target"]
transform = Transform( -4.6, 4.02145e-07, 1.75783e-14, 4.02145e-07, 4.6, 8.0429e-07, 5.27349e-14, 8.0429e-07, -4.6, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/turn = SubResource( 7 )

[node name="AudioFire" type="AudioStreamPlayer3D" parent="."]
unit_size = 7.0

[node name="AudioExplode" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_size = 7.0

[node name="AudioEmpty" type="AudioStreamPlayer" parent="."]

[node name="AudioReload" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="finished" from="AudioExplode" to="." method="_on_AudioExplode_finished"]
